<resources>
    <string name="app_name">TriviaQuiz</string>
    <string name="text_view_welcome">Welcome to Trivia App</string>
    <string name="button_exit">Exit</string>
    <string name="button_start_trivia">Start Trivia</string>
    <string name="progress_bar_loading">Loading Trivia</string>
    <string name="progress_bar_ready"> Trivia Ready</string>
    <string name="error_no_internet"> Check your internet connection.y</string>
    <string name="error_no_questions"> Currently no questions are available, please check after some time.</string>

    <string name="text_view_question_no">Q%d</string>
    <string name="text_view_time_left">Time Left: %d seconds</string>
    <string name="text_view_loading_image">Loading Image...</string>
    <string name="button_quit">Quit</string>
    <string name="button_next">Next</string>

    <string name="title_stats">Trivia Stats</string>
    <string name="text_view_correct_answers">Correct Answers</string>
    <string name="text_view_correct_percentage">%d%%</string>
    <string name="text_view_try_again">Try again and see if you can get all the correct answers!</string>
    <string name="button_try_again">Try Again</string>

    <string name="error_no_option_selected">Please select one option.</string>
</resources>
