<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    tools:context="com.hw.mad.trivia.TriviaActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/layout_question_stats">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_view_question_no"
            android:id="@+id/text_view_question_no"
            android:background="@drawable/question_stats_style"
            android:gravity="center"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_view_time_left"
            android:id="@+id/text_view_time_left"
            android:background="@drawable/question_stats_style"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:gravity="center" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/layout_question_picture"
        android:layout_below="@+id/layout_question_stats"
        android:layout_marginTop="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/image_view_question_picture"
            android:background="@drawable/question_picture_style" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/layout_image_loading"
            android:visibility="invisible">

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:id="@+id/progress_bar_image_loading"
                android:minHeight="80dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/progress_bar_image_loading"
                android:gravity="center"
                android:text="@string/text_view_loading_image"/>

        </RelativeLayout>

    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/text_view_question"
        android:layout_below="@+id/layout_question_picture"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_question"
        android:id="@+id/radio_group_options"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp">

    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/layout_question_actions"
        android:layout_marginTop="5dp">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_quit"
            android:id="@+id/action_quit"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:onClick="quitAction"
            android:background="@drawable/button_border_grey"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_next"
            android:id="@+id/action_next"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:onClick="nextAction"
            android:background="@drawable/button_border_grey"/>

    </LinearLayout>

</RelativeLayout>