<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hw.mad.trivia.MainActivity"
    android:background="#FFFFFF">

    <LinearLayout
        android:id="@+id/layout_question_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_view_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:text="@string/text_view_welcome"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_question_center"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/layout_question_text"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_view_trivia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/image_view_trivia"
            android:layout_below="@+id/txtViewWelcome"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_vertical"


            android:gravity="center" />

        <ProgressBar
            android:id="@+id/progress_bar_loading"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/image_view_trivia"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:paddingLeft="140dp"
            android:paddingRight="140dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_loading_ready"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_question_actions"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/layout_question_center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_loading_ready"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="30sp"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_question_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginRight="10dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_exit"
                android:id="@+id/action_exit"
                android:onClick="exit"
                android:background="@drawable/button_border_grey" />
        </LinearLayout>


        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginLeft="10dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_start_trivia"
                android:id="@+id/action_start_trivia"
                android:onClick="startTrivia"
                android:background="@drawable/button_border_grey"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
